--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://VovaShulepa.github.io/goit-js-hw-11",
+  "homepage": "https://VovaShulepa.github.io/Photo-Library-SimpleLightbox-js",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "build": "parcel build src/*.html --public-url /Photo-Library-SimpleLightbox-js/"
   },
   "repository": {
     "type": "git",
